--- a/styles.css
+++ b/styles.css
@@ -42,14 +42,34 @@ h2 {
 p.imgtitle {
   font-size: 1.1em;
   margin: 0;
+  font-style: italic;
+  text-align: center;
+  height: 130%;
 }
 
-table,
-.frame {
+table,.frame {
   border: 3px solid green;
+}
+
+th,td { 
+  border: 3px solid green;
+  border-collapse: collapse;
+  background-color: rgba(227, 225, 233, 0.8);
+}
+
+th{
+  background-color: green;
+  padding: 10px;
+  color: white;
+
 }
 
 a:link,
 a:visited {
   color: blue;
+}
+
+p{
+  text-align: justify;
+  text-indent: 25px;
 }
